--- a/weather_project/weather_app/templates/detail.html
+++ b/weather_project/weather_app/templates/detail.html
@@ -229,7 +229,7 @@
                                 <i class="fa-regular fa-sun header-icon"></i>UV
                             </th>
                             <th width="10%">
-                                <i class="fa-solid fa-layer-group header-icon"></i>Đất ẩm
+                                <i class="fa-solid fa-layer-group header-icon"></i>Độ ẩm đất
                             </th>
                         </tr>
                     </thead>
