--- a/weather_project/weather_app/templates/prediction.html
+++ b/weather_project/weather_app/templates/prediction.html
@@ -199,7 +199,7 @@
                                 label: 'Khả năng cao nhất',
                                 data: rawData.max,
                                 borderColor: '#e74c3c', // Đỏ
-                                borderWidth: 2,
+                                borderWidth: 4,
                                 borderDash: [5, 5], // Nét đứt
                                 pointRadius: 0,
                                 fill: false,
@@ -210,8 +210,8 @@
                             {
                                 label: 'Khả năng thấp nhất',
                                 data: rawData.min,
-                                borderColor: '#2ecc71', // Xanh lá
-                                borderWidth: 2,
+                                borderColor: '#43cc2eff', // Xanh lá
+                                borderWidth: 4,
                                 borderDash: [5, 5], // Nét đứt
                                 pointRadius: 0,
                                 fill: false,
